fixed spacing issue with large screens

--- a/src/Pages/About/AboutPage.scss
+++ b/src/Pages/About/AboutPage.scss
@@ -30,12 +30,13 @@
       align-items: center;
     }
     .large-text {
-      font-size: 1.2rem;
+      font-size: 1rem;
       letter-spacing: 2px;
       flex: 1;
-      line-height: 3;
+      line-height: 2.5;
       width: 80%;
-      margin-right: 0.4rem;
+      margin-right: 2rem;
+
       @media screen and (max-width: 1080px) {
         font-size: 1rem;
       }
@@ -44,24 +45,25 @@
       }
       @media screen and (max-width: 700px) {
         width: 95%;
+        text-align: center;
+        margin: auto;
       }
     }
     .sub-text {
       flex: 1;
-      font-size: 0.9rem;
+      font-size: 1rem;
       line-height: 2.5;
-      letter-spacing: 1px;
+      letter-spacing: 2px;
       text-align: right;
       @media screen and (max-width: 1080px) {
-        font-size: 0.8rem;
+        font-size: 1rem;
       }
       @media screen and (max-width: 768px) {
-        font-size: 0.6rem;
+        font-size: 0.8rem;
       }
       @media screen and (max-width: 700px) {
+        width: 95%;
         text-align: center;
-        font-size: 0.7rem;
-        line-height: 3;
       }
     }
   }
