--- a/src/Pages/Contact/contact.scss
+++ b/src/Pages/Contact/contact.scss
@@ -3,6 +3,7 @@
   display: flex;
   width: 92vw;
   margin: auto;
+  max-width: 2400px;
   @media screen and (max-width: 950px) {
     flex-direction: column;
     justify-content: center;
@@ -139,6 +140,7 @@
               font-size: 0.6rem;
               height: 80px;
               width: 80px;
+              color: black;
             }
           }
         }
