--- a/src/Pages/Home/Partners.scss
+++ b/src/Pages/Home/Partners.scss
@@ -2,6 +2,7 @@
   // height: 100vh;
   max-width: 1330px;
   margin: 4rem auto;
+  margin-bottom: 8rem;
   @media screen and (max-width: 768px) {
     display: none;
   }
